<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="viewmodel"
            type="com.codigo.testone.CreateViewModel" />
        <variable
            name="activity"
            type="com.codigo.testone.CreateActivity" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".CreateActivity"
        android:background="@color/create_back">

        <ImageView
            android:id="@+id/imageView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="45dp"
            android:onClick="@{() -> activity.finish()}"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_back"
            android:contentDescription="@string/backArrow"/>

        <TextView
            android:id="@+id/textView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="16dp"
            android:text="@string/almost_there"
            android:fontFamily="@font/chivo_bold"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/imageView4"
            app:layout_constraintTop_toBottomOf="@+id/imageView4" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/create_description"
            android:fontFamily="@font/chivo_regular"
            android:textColor="@color/black"
            app:layout_constraintEnd_toEndOf="@+id/textView"
            app:layout_constraintStart_toStartOf="@+id/textView"
            app:layout_constraintTop_toBottomOf="@+id/textView" />

        <View
            android:id="@+id/view"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_marginTop="32dp"
            android:layout_marginBottom="8dp"
            android:background="@color/white"
            app:layout_constraintBottom_toTopOf="@+id/view2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView5"
            app:layout_constraintVertical_bias="0.0" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/mandtory"
            android:fontFamily="@font/chivo_regular"
            android:textSize="10sp"
            app:layout_constraintEnd_toEndOf="@+id/textView4"
            app:layout_constraintStart_toStartOf="@+id/textView4"
            app:layout_constraintTop_toBottomOf="@+id/textView4"
            tools:ignore="SmallSp" />

        <ImageView
            android:id="@+id/imageView5"
            android:layout_width="100dp"
            android:layout_height="150dp"
            app:layout_constraintBottom_toTopOf="@+id/view"
            app:layout_constraintEnd_toEndOf="@+id/textView5"
            app:layout_constraintTop_toBottomOf="@+id/textView5"
            app:layout_constraintVertical_bias="0.52"
            app:srcCompat="@drawable/guitar"
            android:contentDescription="@string/guitar"/>

        <View
            android:id="@+id/view2"
            android:layout_width="wrap_content"
            android:layout_height="80dp"
            android:background="@color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/button"
            android:layout_width="0dp"
            android:layout_height="55dp"
            android:text="@string/create_acc_now"
            android:textAllCaps="false"
            android:background="@drawable/create_background"
            android:textColor="@color/white"
            android:onClick="@{() -> viewmodel.createAccount()}"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/textView4"
            app:layout_constraintStart_toStartOf="@+id/imageView4"
            app:layout_constraintTop_toTopOf="@+id/view2" />

        <ScrollView
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:background="@color/white"
            android:fillViewport="true"
            app:layout_constraintBottom_toBottomOf="@+id/view"
            app:layout_constraintEnd_toEndOf="@+id/view"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="@+id/view"
            app:layout_constraintTop_toTopOf="@+id/view"
            app:layout_constraintVertical_bias="0.0">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/textView6"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="4dp"
                    android:layout_marginTop="16sp"
                    android:fontFamily="@font/chivo_regular"
                    android:text="@string/first_name"
                    android:textSize="12sp"
                    app:layout_constraintStart_toStartOf="@+id/editTextTextPersonName"
                    app:layout_constraintTop_toTopOf="parent" />

                <EditText
                    android:id="@+id/editTextTextPersonName"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginEnd="16dp"
                    android:ems="10"
                    android:fontFamily="@font/chivo_regular"
                    android:inputType="textPersonName"
                    android:minHeight="48dp"
                    android:textColor="@color/black"
                    android:textSize="12sp"
                    android:hint="@string/firstname"
                    android:imeOptions="flagNoExtractUi"
                    android:text="@={viewmodel.firstName}"
                    app:error="@{viewmodel.firstNameError}"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textView6" />

                <TextView
                    android:id="@+id/textView7"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="12dp"
                    android:fontFamily="@font/chivo_regular"
                    android:text="@string/lastname"
                    android:textSize="12sp"
                    app:layout_constraintStart_toStartOf="@+id/textView6"
                    app:layout_constraintTop_toBottomOf="@+id/editTextTextPersonName" />

                <EditText
                    android:id="@+id/editTextTextPersonName2"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:inputType="textPersonName"
                    android:minHeight="48dp"
                    android:textColor="@color/black"
                    android:textSize="12sp"
                    android:hint="@string/last_name"
                    android:imeOptions="flagNoExtractUi"
                    android:text="@={viewmodel.lastName}"
                    app:error="@{viewmodel.lastNameError}"
                    app:layout_constraintEnd_toEndOf="@+id/editTextTextPersonName"
                    app:layout_constraintStart_toStartOf="@+id/editTextTextPersonName"
                    app:layout_constraintTop_toBottomOf="@+id/textView7" />

                <TextView
                    android:id="@+id/textView8"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="12dp"
                    android:fontFamily="@font/chivo_regular"
                    android:text="@string/email_address"
                    android:textSize="12sp"
                    app:layout_constraintStart_toStartOf="@+id/textView7"
                    app:layout_constraintTop_toBottomOf="@+id/editTextTextPersonName2" />

                <EditText
                    android:id="@+id/editTextTextPersonName3"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:inputType="textEmailAddress"
                    android:minHeight="48dp"
                    android:textColor="@color/black"
                    android:textSize="12sp"
                    android:hint="@string/email"
                    android:imeOptions="flagNoExtractUi"
                    android:text="@={viewmodel.email}"
                    app:error="@{viewmodel.emailError}"
                    app:layout_constraintEnd_toEndOf="@+id/editTextTextPersonName2"
                    app:layout_constraintStart_toStartOf="@+id/editTextTextPersonName2"
                    app:layout_constraintTop_toBottomOf="@+id/textView8" />

                <TextView
                    android:id="@+id/textView9"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="12dp"
                    android:fontFamily="@font/chivo_regular"
                    android:text="@string/date_of_birth"
                    android:textSize="12sp"
                    app:layout_constraintStart_toStartOf="@+id/textView8"
                    app:layout_constraintTop_toBottomOf="@+id/editTextTextPersonName3" />

                <EditText
                    android:id="@+id/editTextTextPersonName4"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="16dp"
                    android:drawableEnd="@drawable/dob"
                    android:ems="10"
                    android:hint="@string/dd_mm_yyyy"
                    android:inputType="textPersonName"
                    android:minHeight="48dp"
                    android:textColor="@color/black"
                    android:textSize="12sp"
                    android:focusable="false"
                    android:imeOptions="flagNoExtractUi"
                    android:text="@={viewmodel.dob}"
                    android:onClick="@{(view) -> viewmodel.openDatePicker(view)}"
                    app:error="@{viewmodel.dobError}"
                    app:layout_constraintEnd_toStartOf="@+id/switchCompat"
                    app:layout_constraintStart_toStartOf="@+id/editTextTextPersonName3"
                    app:layout_constraintTop_toBottomOf="@+id/textView9" />

                <androidx.appcompat.widget.SwitchCompat
                    android:id="@+id/switchCompat"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/toggle_text"
                    android:textOff="@string/female"
                    android:textOn="@string/male"
                    android:thumb="@drawable/toggle_select"
                    android:fontFamily="@font/chivo_regular"
                    app:layout_constraintBottom_toBottomOf="@+id/editTextTextPersonName4"
                    app:layout_constraintEnd_toEndOf="@+id/editTextTextPersonName3"
                    app:layout_constraintTop_toTopOf="@+id/editTextTextPersonName4"
                    app:layout_constraintVertical_bias="0.499"
                    app:showText="true"
                    app:track="@drawable/toggle_track" />

                <TextView
                    android:id="@+id/textView10"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="12dp"
                    android:text="@string/nationality"
                    android:textSize="12sp"
                    android:fontFamily="@font/chivo_regular"
                    app:layout_constraintStart_toStartOf="@+id/textView9"
                    app:layout_constraintTop_toBottomOf="@+id/editTextTextPersonName4" />

                <EditText
                    android:id="@+id/editTextTextPersonName5"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:inputType="textPersonName"
                    android:minHeight="48dp"
                    android:textColor="@color/black"
                    android:textSize="12sp"
                    android:imeOptions="flagNoExtractUi"
                    android:text="@={viewmodel.nationality}"
                    app:error="@{viewmodel.nationalityError}"
                    app:layout_constraintEnd_toEndOf="@+id/editTextTextPersonName3"
                    app:layout_constraintStart_toStartOf="@+id/editTextTextPersonName4"
                    app:layout_constraintTop_toBottomOf="@+id/textView10"
                    tools:ignore="SpeakableTextPresentCheck" />

                <TextView
                    android:id="@+id/textView11"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="12dp"
                    android:text="@string/country_of_residence"
                    android:textSize="12sp"
                    android:fontFamily="@font/chivo_regular"
                    app:layout_constraintStart_toStartOf="@+id/textView10"
                    app:layout_constraintTop_toBottomOf="@+id/editTextTextPersonName5" />

                <EditText
                    android:id="@+id/editTextTextPersonName6"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="100dp"
                    android:ems="10"
                    android:inputType="textPersonName"
                    android:minHeight="48dp"
                    android:textColor="@color/black"
                    android:textSize="12sp"
                    android:imeOptions="flagNoExtractUi"
                    android:text="@={viewmodel.residence}"
                    app:error="@{viewmodel.residenceError}"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="@+id/editTextTextPersonName5"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="@+id/editTextTextPersonName5"
                    app:layout_constraintTop_toBottomOf="@+id/textView11"
                    app:layout_constraintVertical_bias="0.0"
                    tools:ignore="SpeakableTextPresentCheck" />

                <TextView
                    android:id="@+id/textView12"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="12dp"
                    android:text="@string/mobile_no"
                    app:layout_constraintStart_toStartOf="@+id/textView11"
                    app:layout_constraintTop_toBottomOf="@+id/editTextTextPersonName6" />

                <EditText
                    android:id="@+id/editTextTextPersonName7"
                    android:layout_width="50dp"
                    android:layout_height="wrap_content"
                    android:background="@android:color/transparent"
                    android:ems="10"
                    android:inputType="textPersonName"
                    android:minHeight="48dp"
                    android:imeOptions="flagNoExtractUi"
                    android:text="@={viewmodel.countryCode}"
                    android:textColor="@color/black"
                    android:textSize="12sp"
                    app:error="@{viewmodel.countryCodeError}"
                    app:layout_constraintStart_toStartOf="@+id/editTextTextPersonName6"
                    app:layout_constraintTop_toBottomOf="@+id/textView12" />

                <View
                    android:id="@+id/divider"
                    android:layout_width="1dp"
                    android:layout_height="0dp"
                    android:layout_marginTop="12dp"
                    android:layout_marginBottom="16dp"
                    android:background="?android:attr/listDivider"
                    app:layout_constraintBottom_toBottomOf="@+id/editTextTextPersonName7"
                    app:layout_constraintStart_toEndOf="@+id/editTextTextPersonName7"
                    app:layout_constraintTop_toTopOf="@+id/editTextTextPersonName7" />

                <EditText
                    android:id="@+id/editTextTextPersonName8"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:background="@android:color/transparent"
                    android:ems="10"
                    android:inputType="textPersonName"
                    android:minHeight="48dp"
                    android:textColor="@color/black"
                    android:textSize="12sp"
                    android:imeOptions="flagNoExtractUi"
                    android:text="@={viewmodel.phoneNumber}"
                    app:error="@{viewmodel.phoneNumberError}"
                    app:layout_constraintBottom_toBottomOf="@+id/editTextTextPersonName7"
                    app:layout_constraintEnd_toEndOf="@+id/editTextTextPersonName6"
                    app:layout_constraintStart_toEndOf="@+id/divider"
                    app:layout_constraintTop_toTopOf="@+id/editTextTextPersonName7"
                    app:layout_constraintVertical_bias="0.43" />

                <View
                    android:id="@+id/divider2"
                    android:layout_width="0dp"
                    android:layout_height="1dp"
                    android:background="?android:attr/listDivider"
                    app:layout_constraintEnd_toEndOf="@+id/editTextTextPersonName8"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="@+id/editTextTextPersonName7"
                    app:layout_constraintTop_toBottomOf="@+id/editTextTextPersonName8" />


            </androidx.constraintlayout.widget.ConstraintLayout>

        </ScrollView>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>